--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -13,7 +13,7 @@ parameters:
         - "%kernel.root_dir%/Resources/data/words.xml"
 
 framework:
-    #esi:             ~
+    esi:             ~
     translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
